# calicoctl

./: .gitignore  BUILD  WORKSPACE  go.mod  go.sum
calicoctl/: BUILD.bazel
calicoctl/commands/: BUILD.bazel
calicoctl/commands/argutils/: BUILD.bazel
calicoctl/commands/clientmgr/: BUILD.bazel
calicoctl/commands/constants/: BUILD.bazel
calicoctl/commands/ipam/: BUILD.bazel
calicoctl/commands/node/: BUILD.bazel
calicoctl/commands/v1resourceloader/: BUILD.bazel
calicoctl/resourcemgr/: BUILD.bazel
calicoctl/util/yaml/: BUILD.bazel
