load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["calicoctl.go"],
    importpath = "github.com/projectcalico/calicoctl/calicoctl",
    visibility = ["//visibility:private"],
    deps = [
        "//calicoctl/commands:go_default_library",
        "@com_github_docopt_docopt_go//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "calicoctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
