load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "convert.go",
        "create.go",
        "delete.go",
        "get.go",
        "ipam.go",
        "label.go",
        "node_darwin.go",
        "node_linux.go",
        "node_windows.go",
        "printer.go",
        "replace.go",
        "resources.go",
        "version.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/argutils:go_default_library",
        "//calicoctl/commands/clientmgr:go_default_library",
        "//calicoctl/commands/constants:go_default_library",
        "//calicoctl/commands/ipam:go_default_library",
        "//calicoctl/commands/v1resourceloader:go_default_library",
        "//calicoctl/resourcemgr:go_default_library",
        "@com_github_docopt_docopt_go//:go_default_library",
        "@com_github_projectcalico_go_json//json:go_default_library",
        "@com_github_projectcalico_go_yaml_wrapper//:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/apis/v1/unversioned:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/clientv3:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/errors:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/options:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/upgrade/converters:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/validator/v3:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:linux": [
            "//calicoctl/commands/node:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = ["commands_suite_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//reporters:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
