load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "convert.go",
        "create.go",
        "delete.go",
        "get.go",
        "ipam.go",
        "label.go",
        "node_darwin.go",
        "node_linux.go",
        "node_windows.go",
        "printer.go",
        "replace.go",
        "resources.go",
        "version.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/argutils:go_default_library",
        "//calicoctl/commands/clientmgr:go_default_library",
        "//calicoctl/commands/constants:go_default_library",
        "//calicoctl/commands/ipam:go_default_library",
        "//calicoctl/commands/v1resourceloader:go_default_library",
        "//calicoctl/resourcemgr:go_default_library",
        "//vendor/github.com/docopt/docopt-go:go_default_library",
        "//vendor/github.com/projectcalico/go-json/json:go_default_library",
        "//vendor/github.com/projectcalico/go-yaml-wrapper:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/apis/v1/unversioned:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/clientv3:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/errors:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/options:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/upgrade/converters:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/validator/v3:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:linux": [
            "//calicoctl/commands/node:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = ["commands_suite_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/reporters:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
