load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bgpconfig.go",
        "bgppeer.go",
        "clusterinfo.go",
        "doc.go",
        "felixconfig.go",
        "globalnetworkpolicy.go",
        "globalnetworkset.go",
        "hostendpoint.go",
        "ippool.go",
        "networkpolicy.go",
        "node.go",
        "profile.go",
        "resourcemgr.go",
        "workloadendpoint.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/resourcemgr",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/argutils:go_default_library",
        "//calicoctl/util/yaml:go_default_library",
        "@com_github_projectcalico_go_yaml_wrapper//:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/apis/v3:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/backend/k8s/conversion:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/clientv3:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/errors:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/options:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/validator/v3:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["resourcemgr_suite_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//reporters:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
