load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "args.go",
        "validate.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/argutils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_projectcalico_libcalico_go//lib/net:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/numorstring:go_default_library",
    ],
)
