load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "args.go",
        "validate.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/argutils",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/projectcalico/libcalico-go/lib/net:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/numorstring:go_default_library",
    ],
)
