load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/clientmgr",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/constants:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/apiconfig:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/clientv3:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
