load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/clientmgr",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/constants:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/apiconfig:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/clientv3:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
