load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "release.go",
        "show.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/ipam",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/argutils:go_default_library",
        "//calicoctl/commands/clientmgr:go_default_library",
        "//calicoctl/commands/constants:go_default_library",
        "//vendor/github.com/docopt/docopt-go:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/net:go_default_library",
    ],
)
