load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "checksystem.go",
        "diags.go",
        "permissions.go",
        "run.go",
        "status.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/node",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/argutils:go_default_library",
        "//calicoctl/commands/clientmgr:go_default_library",
        "//calicoctl/commands/constants:go_default_library",
        "@com_github_docopt_docopt_go//:go_default_library",
        "@com_github_mcuadros_go_version//:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_osrg_gobgp//client:go_default_library",
        "@com_github_osrg_gobgp//packet/bgp:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/apiconfig:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/names:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/net:go_default_library",
        "@com_github_shirou_gopsutil//process:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_termie_go_shutil//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "node_suite_test.go",
        "status_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//extensions/table:go_default_library",
        "@com_github_onsi_ginkgo//reporters:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/testutils:go_default_library",
    ],
)
