load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "checksystem.go",
        "diags.go",
        "permissions.go",
        "run.go",
        "status.go",
    ],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/node",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/commands/argutils:go_default_library",
        "//calicoctl/commands/clientmgr:go_default_library",
        "//calicoctl/commands/constants:go_default_library",
        "//vendor/github.com/docopt/docopt-go:go_default_library",
        "//vendor/github.com/mcuadros/go-version:go_default_library",
        "//vendor/github.com/olekukonko/tablewriter:go_default_library",
        "//vendor/github.com/osrg/gobgp/client:go_default_library",
        "//vendor/github.com/osrg/gobgp/packet/bgp:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/apiconfig:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/names:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/net:go_default_library",
        "//vendor/github.com/shirou/gopsutil/process:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/termie/go-shutil:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "node_suite_test.go",
        "status_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/ginkgo/reporters:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/testutils:go_default_library",
    ],
)
