load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["v1resourceloader.go"],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/v1resourceloader",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/util/yaml:go_default_library",
        "@com_github_projectcalico_go_yaml_wrapper//:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/apis/v1:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/apis/v1/unversioned:go_default_library",
        "@com_github_projectcalico_libcalico_go//lib/validator/v1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
