load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["v1resourceloader.go"],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/commands/v1resourceloader",
    visibility = ["//visibility:public"],
    deps = [
        "//calicoctl/util/yaml:go_default_library",
        "//vendor/github.com/projectcalico/go-yaml-wrapper:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/apis/v1:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/apis/v1/unversioned:go_default_library",
        "//vendor/github.com/projectcalico/libcalico-go/lib/validator/v1:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
