load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["separator.go"],
    importpath = "github.com/projectcalico/calicoctl/calicoctl/util/yaml",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "separator_test.go",
        "yaml_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//reporters:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
